Updated amount of enemies